<resources>
    <string name="app_name">Calculadora</string>
    <string name="hello">Hello Ely!</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="dot">.</string>
    <string name="change_sign">\u00b1</string>
    <string name="percent_sign">%</string>
    <string name="divide_sign">\u00f7</string>
    <string name="multiply_sign">\u00d7</string>
    <string name="minus_sign">\u2212</string>
    <string name="plus_sign">\u002b</string>
    <string name="equal_sign">\u003d</string>
    <string name="del">DEL</string>
    <string name="sqrt">\u221a</string>
    <string name="to">\u02c6</string>
</resources>
